# multinpainter-gui

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  macdeploy  nui.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tmp.txt
app/: build_mac_with_nuitka.sh  build_mac_with_pyinstaller.sh  build_with_nuitka.py  dmgbuild_settings.py  multinpaint.py  multinpainter.iss  multinpainter.py  pyinstaller-mac.spec  pyinstaller-win.spec
app/icons/: multinpainter.icns  multinpainter.iconsproj
docs/: conf.py  index.md
icons/: multinpainter.icns
src/multinpainter/: __init__.py  __main__.py  models.py  multinpainter.py  utils.py
src/multinpainter_gui/: __main__.py  __main__.py.bak
tests/: conftest.py  test_skeleton.py
